--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reimbursement-form",
   "version": "0.1.0",
+  "homepage": "https://zakdances.github.io/southbayaor-reimbursement-form",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
