--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "numbro": "^2.5.0",
     "react": "^18.2.0",
